--- a/order/templates/order/hello.html
+++ b/order/templates/order/hello.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
 </head>
 <body>
 <h1> Welcome to django</h1>
